<resources>
    <string name="app_name">Agrivator</string>
    <string name="title_items">Item</string>
    <string name="title_order">Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="button_grocery">Grocery</string>
    <string name="button_our_product">Our Product</string>
    <string name="title_order_by_store">Order By Store</string>
    <string name="button_medicine">Medicines</string>
    <string name="button_pet_supplies">Pet Supplies</string>
    <string name="button_vegetables">Vegetables</string>
    <string name="button_fruits">Fruits</string>
</resources>
