<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_items">

    <fragment
        android:id="@+id/navigation_items"
        android:name="com.agrivator.agrivator_user.ui.items.ItemFragment"
        android:label="@string/title_items"
        tools:layout="@layout/fragment_item" />


    <fragment
        android:id="@+id/navigation_order"
        android:name="com.agrivator.agrivator_user.ui.order.OrderFragments"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/navigation_create_list"
        android:name="com.agrivator.agrivator_user.ui.create_list.CreateListFragments"
        android:label="@string/title_create_list"
        tools:layout="@layout/fragment_create_list" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.agrivator.agrivator_user.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
