<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agrivator.agrivator_user.product">

    <Button
        android:id="@+id/buttonMed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/ic_local_hospital_black_24dp"
        android:text="@string/button_medicine"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFruits"
        app:layout_constraintEnd_toStartOf="@+id/buttonPet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/ic_pets_black_24dp"
        android:text="@string/button_pet_supplies"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonVegetables"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMed"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFruits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_fruit"
        android:text="@string/button_fruits"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonVegetables"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMed" />

    <Button
        android:id="@+id/buttonVegetables"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_vegetables"
        android:text="@string/button_vegetables"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonFruits"
        app:layout_constraintTop_toBottomOf="@+id/buttonPet" />
</androidx.constraintlayout.widget.ConstraintLayout>
